Add config environment

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
             "App\\": "app/",
             "sethink\\swooleOrm\\":"plugins/swoole-orm/src"
         }
+    },
+    "require-dev": {
+        "symfony/dotenv": "^4.2"
     }
 }
