use utf8mb4 for emoji

--- a/config/.env_default
+++ b/config/.env_default
@@ -4,7 +4,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
 DB_PASS=
-DB_CHARSET=utf8
+DB_CHARSET=utf8mb4
 DB_DATABASE=twitch
 DB_POOLMIN=5
 DB_CLEARTIME=60000
